ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nirvana-ingress
  namespace: music
  annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: warmpillow.xyz
    http:
      paths:
      # The * is needed so that all traffic gets redirected to nginx
      - path: /*
        backend:
          serviceName: ampache-service
          servicePort: 8054
#  tls:
#   - secretName: ssl6
#     hosts:
#      - warmpillow.xyz
